// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsPopup  main container renders correctly 1`] = `
"<div className=\\"co-insights__box\\">
  <p className=\\"insights-widget-text-enabled\\">
    Insights Advisor identifies and prioritizes risks to security, performance, availability, and stability of your clusters
  </p>
  <AdvisorChart metrics={{...}} clusterId=\\"\\" />
  <div className=\\"co-status-popup__section\\">
    <Component href=\\"https://cloud.redhat.com/openshift/\\" text=\\"Go to OpenShift Cluster Manager\\" />
  </div>
</div>"
`;

exports[`InsightsPopup disabled state renders the isWaitingOrDisabled component correctly 1`] = `
"<div className=\\"co-insights__box\\">
  <p className=\\"insights-widget-text-enabled\\">
    Insights Advisor identifies and prioritizes risks to security, performance, availability, and stability of your clusters
  </p>
  <div className=\\"co-status-popup__section-text-secondary\\">
    <p className=\\"insights-widget-text-disabled\\">
      Disabled or waiting for results.
    </p>
  </div>
  <div className=\\"co-status-popup__section\\">
    <Component href=\\"https://docs.okd.io/latest/support/remote_health_monitoring/using-insights-to-identify-issues-with-your-cluster.html\\" text=\\"More about Insights\\" />
  </div>
</div>"
`;

exports[`InsightsPopup error state renders the error component correctly 1`] = `
"<div className=\\"co-insights__box\\">
  <p className=\\"insights-widget-text-enabled\\">
    Insights Advisor identifies and prioritizes risks to security, performance, availability, and stability of your clusters
  </p>
  <div className=\\"co-status-popup__section-text-secondary\\">
    <p className=\\"insights-widget-text-error\\">
      Temporary unavailable.
    </p>
  </div>
  <div className=\\"co-status-popup__section\\">
    <Component href=\\"https://docs.okd.io/latest/support/remote_health_monitoring/using-insights-to-identify-issues-with-your-cluster.html\\" text=\\"More about Insights\\" />
  </div>
</div>"
`;
